feat(lsp): add LSP plugin support with Windows uv_spawn auto-fix
- Add LSP Plugins section to setup.md with install instructions for all 4
  language servers (pyright, typescript, jdtls, JetBrains kotlin-lsp)
- Add healthcheck auto-patch for marketplace.json on Windows: patches
  node.exe direct-spawn for JS servers, cmd.exe wrapper for bat servers,
  and full-path .cmd for JetBrains kotlin-lsp
- Switch from fwcd/kotlin-language-server to JetBrains/kotlin-lsp for
  faster startup and no workspace scanning timeout
- Add jdtls initializationOptions (disable autobuild, exclude build dirs)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>